# example_cpp_unit_testing

./: .gitignore  BUILD  CMakeLists.txt  WORKSPACE  absl_test.cpp  compdb.py  hello_test.cc  main.cpp
app/: abstractio.cpp  abstractnumberconverter.h  testable_code.cpp
main/: BUILD  Person.cpp  Person.h  abstractio.h  abstractnumberconverter.cpp  constructor_work.h  main.cpp  person_test.cpp  testable_code.cpp
